<resources>
    <string name="app_name">Spectrometer</string>

    <!-- Strings related to Settings -->
    <string name="pref_key_average_calibration">switch_average_calibration</string>
    <string name="pref_title_average_calibration">Average calibration</string>
    <string name="pref_title_average_calibration_description">Average calibration description</string>
    <string name="pref_key_average_measurement">switch_average_measurement</string>
    <string name="pref_title_average_measurement">Average measurement</string>
    <string name="pref_title_average_measurement_description">Average measurement description</string>
    <string name="pref_key_autoscale">switch_autoscale</string>
    <string name="pref_title_autoscale">Autoscale</string>
    <string name="pref_title_autoscale_description">Autoscale description</string>
    <string name="pref_key_integration_time">number_integration_time</string>
    <string name="pref_title_integration_time">Integration time (ms)</string>
    <string name="pref_title_integration_time_description">Integration time in milliseconds</string>


    <!-- titles -->
    <string name="title_action_settings">Settings</string>
    <string name="title_action_share">Share</string>
    <string name="title_button_calibration">Cal</string>
    <string name="title_button_measurement">M</string>
    <string name="title_togglebutton_continuous">Cont</string>
</resources>
